alternate content module right alignment issue fixed

--- a/src/modules/u4m-alternating-content.module/module.scss
+++ b/src/modules/u4m-alternating-content.module/module.scss
@@ -101,7 +101,7 @@
             padding-left: 150rem;
             padding-top: 52rem;
             padding-bottom: 52rem;
-            padding-right: 52rem;
+            padding-right: 0rem;
         }
     }
 
